syntax = "proto3";

option java_package = "com.linwei.cams.datastore.protobuf";
option java_multiple_files = true;

message LanguagePreferences {
  // 格式：字段类型 + 字段名称 + 字段编号
  string locale = 1;

}